# embspec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PORTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  test.yml
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD  SUBMIT.md
packaging/copr/: SUBMIT.md  python-embspec.spec
packaging/debian/: SUBMIT.md  changelog  control  copyright  rules
src/embspec/: __init__.py  _adapter.py  _assert.py  _errors.py  _manifest.py  _stability.py
tests/: __init__.py  _path.py  test_adapter.py  test_assert.py  test_assert_unittest.py  test_manifest.py  test_manifest_unittest.py  test_stability.py  test_stability_unittest.py
